--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About
 description: 穷则独善其身 达则兼济天下
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/About-Banner.jpg"
 ---
 
 <!-- Chinese Version -->
